--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "reflect-metadata": "^0.1.13",
     "swr": "^2.1.3",
     "typeorm": "^0.3.14",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
